<resources>
    <string name="app_name">Medical Vision Scan</string>
    <string name="scan_and_identify_eye_health">Scan and identify eye health</string>
    <string name="success_identified_your_eyes">Success identified your eyes</string>
    <string name="description">Description</string>
    <string name="from_wikipedia_the_free_encyclopedia">From Wikipedia, the free encyclopedia</string>
    <string name="cataract">Cataract was identified in your eye</string>
    <string name="cataract_desc">Katarak adalah suatu kondisi dimana lensa mata mengalami kekeruhan sehingga menyebabkan menurunnya kemampuan penglihatan sampai kebutaan. Sebagian besar katarak disebabkan oleh proses penuaan. Faktor risiko yang dapat meningkatkan katarak adalah angka harapan hidup yang meningkat, riwayat trauma pada mata, infeksi saat kehamilan, konsumsi atau penggunaan tetes mata steroid dalam waktu lama, penyakit seperti kencing manis dan hipertensi, merokok, alkohol, paparan sinar matahari berlebih, paparan racun, riwayat keluarga, riwayat operasi pada mata, dan penyakit mata lainnya seperti glaukoma atau uveitis. Gejala katarak adalah pandangan kabur seperti berkabut, melihat lingkaran di sekeliling cahaya, penglihatan ganda, penurunan pengelihatan di malam hari, silau saat melihat cahaya, dan sering mengganti ukuran kacamata. Apabila mengalami gejala seperti yang disebutkan, harus segera memeriksakan mata ke dokter spesialis mata terdekat.</string>
    <string name="prevention">Prevention</string>
    <string name="cataract_prevention">Cara mencegah katarak adalah dengan melakukan pemeriksaan mata secara teratur, melindungi mata dari benturan dan cahaya berlebih (UV), kontrol gula darah dan tekanan darah, mengurangi berkendara di malam hari, penerangan yang cukup saat membaca atau melihat dekat, dan mengonsumsi makanan kaya antioksidan seperti vitamin A, C, dan E. Apabila sudah terlanjur terkena katarak, tidak dapat disembuhkan dengan obat. Hindari menggunakan obat-obatan tetes yang diklaim dapat menyembuhkan katarak karena tidak terbukti secara ilmiah.</string>
    <string name="normal">Your eyes are in normal condition</string>
    <string name="normal_desc">Bola mata yang normal berbentuk bulat sempurna sehingga cahaya yang masuk ke mata bisa dipantulkan secara sempurna ke retina, yang membuatmu dapat melihat dengan jelas.</string>
    <string name="normal_prevention">Hindari paparan langsung sinar matahari atau kemasukan benda asing dengan menggunakan pelindung atau kacamata saat berada di luar ruangan maupun saat berkendara\nSetelah 20 menit menatap layar gawai atau gadget secara langsung, palingkan mata selama 20 detik dengan melihat objek sejauh 20 meter\nMenjaga kebersihan mata serta tidak menggosok mata.</string>
</resources>